remove old partials

--- a/app/views/books/_others.html.haml
+++ b/app/views/books/_others.html.haml
@@ -12,6 +12,17 @@
       =render :partial => "books/carousel"
       
   .col-md-6
+    %h4 
+      =I18n.t(:book_details_found_user_viewed)
+    - if (@also_viewed_books != nil && @also_viewed_books.count > 0)
+      - @total_array = @also_viewed_books 
+      - @divname = "alsoviewed"
+      - @controller = "books"
+      - @action = "show"
+      - @default_img = "nocollection.png"
+      =render :partial => "books/carousel"
+      
+  .col-md-6
     %h4
       = I18n.t(:related_books)
     - if (!(@related_books.nil? ) && (@related_books['response']['docs'] != '') && (@related_books['response']['numFound'] > 1))
@@ -21,3 +32,5 @@
       - @action = "show"
       - @default_img = "book_thumb.png"
       =render :partial => "books/carousel"
+      
+  
