--- a/app/assets/stylesheets/bootstrap.sass
+++ b/app/assets/stylesheets/bootstrap.sass
@@ -5128,3 +5128,7 @@ th.hidden-lg, td.hidden-lg
     display: table-cell !important
   .hidden-print, tr.hidden-print, th.hidden-print, td.hidden-print
     display: none !important
+    
+
+  textarea
+  rows: 4
