--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -194,8 +194,17 @@ h3 a
     background-color: #6d4479
     cursor: pointer
 
+.dl-horizontal dt
+  text-align: left
+
+.savequery
+  margin: 5px
+
 .sort
   padding-top: 5px
+
+.text-dimmed
+  opacity: 0.4
   
 //NEW_LAYOUT DEVELOPER STYLING
 //***********************Start of Tooltip Styling********************************
