--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -3,10 +3,39 @@
 = javascript_include_tag 'application'
 = javascript_include_tag 'jquery/jquery.tooltipster.min'
 
+= javascript_include_tag 'jquery/jquery.ui.core.js'
+= javascript_include_tag 'jquery/jquery.ui.widget.js'
+= javascript_include_tag 'jquery/jquery.ui.position.js'
+= javascript_include_tag 'jquery/jquery.ui.menu.js'
+= javascript_include_tag 'jquery/jquery.ui.autocomplete.js'
+  
+:javascript
+  $(document).ready(function() {
+        var cache;
+        cache = {};
+        return $("#searchfield").autocomplete({
+          minLength: 2,
+          source: function(request, response) {
+            var term;
+            term = request.term;
+            if (term in cache) {
+              response(cache[term]);
+              return;
+            }
+            search_by = $("#searchby").val();
+            searchfield = $("#searchfield").val();
+            return $.getJSON("/autocomplete?type=" + search_by, request, function(data, status, xhr) {
+              cache[term] = data;
+              return response(data);
+            });
+          }
+        });
+      });
 .row.clearfix  
   - if (@query_array.any? and !(session[:user_id].nil?) and !(@query == "*:*") and (@is_saved == nil))
     = link_to I18n.t(:save_query) , {:controller => :user_search_history, :action => :save_query, :query => parse_url_params(@url_params), :user_id => session[:user_id]}, :class => "search"
-  
+  .col-md-8
+    =render :partial => "books/search"
   .col-md-8.breadcrumb
     =render :partial => "books/breadcrumb"
   .col-md-4.sidebar-offcanvas.pull-right
